--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
